--- a/package.json
+++ b/package.json
@@ -1,4 +1,37 @@
 {
   "name": "portal-service-v2-ddd",
-  "packageManager": "yarn@4.5.3"
+  "main": "bin/index.ts",
+  "scripts": {
+    "dev": "nodemon"
+  },
+  "dependencies": {
+    "app-root-path": "^3.1.0",
+    "awilix": "^12.0.3",
+    "body-parser": "^1.20.3",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
+    "uuid": "^11.0.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "jest-ts-auto-mock": "^2.1.0",
+    "nodemon": "^3.1.7",
+    "ts-auto-mock": "^3.7.4",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
+  }
 }
